terraform-aws-accounts/qa/qa02/70-apps/selenium/selenium-security-group.tf
resource "aws_security_group" "selenium_vnc" {
  name        = "selenium-vnc-${local.vpc_name}"
  description = "Allow VNC and Selenium traffic"
  vpc_id = var.vpc_id

  ingress {
      from_port = 5901
      to_port = 5901
      protocol = "tcp"
      cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
      from_port = 4446
      to_port = 4446
      protocol = "tcp"
      cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
      from_port = 0
      to_port = 0
      protocol = "-1"
      cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "selenium-vnc-${local.vpc_name}"
  }
}
